--- a/New/style.css
+++ b/New/style.css
@@ -11,7 +11,7 @@
   background: none;
   padding: 0;
   min-height: inherit;
-  width: 500px;
+  width: fit-content;
   margin: 0 auto;
 }
 #scrolbar_above_heading > div > h2 > sup {
@@ -1085,6 +1085,13 @@ u {
     > .elementor-widget-wrap {
     padding-left: 35%;
   }
+  #ceo_coin_2026 .elementor-widget-container img
+ {
+        width: 310px;
+    }
+    #ceo_video_2026 {
+        width: 530px;
+    }
 }
 @media screen and (max-width: 1920px) {
   #disclaimers_page #scroll_col .elementor-widget-wrap,
@@ -1342,7 +1349,7 @@ u {
     width: 53%;
   }
   #person_degination_con_2026 {
-        margin-top: -135px;
+    margin-top: -135px;
   }
   /* 2026 */
   #banner_art_text img {
@@ -1570,6 +1577,12 @@ u {
   #main_con_2026.ceo_page_2026 #scroll_col .elementor-widget-wrap {
     height: 260px;
   }
+  #leadership_img {
+        min-height: 65vh !important;
+    }
+        #dir_click_info .director_details h3 {
+        font-size: 16px;
+    }
   /* 2026 */
   #banner_art_text img {
     width: 75%;
@@ -2059,7 +2072,7 @@ u {
   section#leadership_img {
     width: 80%;
   }
-  #main_con_2026.why_page_2026 #full_img_con_2026,
+  /* #main_con_2026.why_page_2026 #full_img_con_2026,
   #main_con_2026.ceo_page_2026 #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
     width: 50%;
@@ -2068,7 +2081,7 @@ u {
   #main_con_2026.ceo_page_2026 #full_content_con_2026,
   #main_con_2026.way_page_2026 #full_content_con_2026 {
     width: 50%;
-  }
+  } */
   /* 2026 */
 }
 @media screen and (max-width: 1281px) and (min-height: 1750px) {
@@ -2085,6 +2098,9 @@ u {
   }
 }
 @media screen and (max-width: 1279px) {
+  #ofltd_main_header_2026 ul.elementor-nav-menu .sub-menu {
+    margin-top: 0 !important;
+  }
   #ofltd_main_header_2026 {
     position: static;
   }
@@ -2100,6 +2116,21 @@ u {
     position: fixed !important;
   }
   .page .elementor-section.elementor-section-height-full {
+    height: auto;
+  }
+  .way_page_2026.tax_mitigation #scroll_col .elementor-widget-wrap,
+  .way_page_2026.private_marktse #scroll_col .elementor-widget-wrap,
+  .way_page_2026.institutional_consulting #scroll_col .elementor-widget-wrap,
+  .way_page_2026.future_proofing #scroll_col .elementor-widget-wrap,
+  .way_page_2026.supporting_family #scroll_col .elementor-widget-wrap,
+  .way_page_2026.building_legacy #scroll_col .elementor-widget-wrap,
+  .way_page_2026.clarity_amid_comp #scroll_col .elementor-widget-wrap,
+  .way_page_2026.turning_tax #scroll_col .elementor-widget-wrap,
+  .way_page_2026.finding_the_heart #scroll_col .elementor-widget-wrap,
+  .why_page_2026.anchored_in_indeepen #scroll_col .elementor-widget-wrap,
+  .why_page_2026.in_love #scroll_col .elementor-widget-wrap,
+  .why_page_2026 #scroll_col .elementor-widget-wrap,
+  .way_page_2026 #scroll_col .elementor-widget-wrap {
     height: auto;
   }
   #contact_page,
@@ -2120,6 +2151,13 @@ u {
     height: 65vh;
     margin-bottom: 60px;
   }
+  /* #main_con_2026.way_page_2026.private_marktse #full_img_con_2026, */
+  #main_con_2026.why_page_2026.in_love #full_img_con_2026{
+    height: 865px;
+  }
+      #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026{
+        height: 520px;
+      }
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     width: 100%;
     height: 755px;
@@ -2190,6 +2228,9 @@ u {
   #main_con_2026.ceo_page_2026 #scroll_col .elementor-widget-wrap {
     height: auto;
   }
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
+        margin-top: 175px;
+    }
   /* 2026 */
   #scroll_col .elementor-widget-wrap {
     height: inherit;
@@ -2389,6 +2430,12 @@ u {
   }
   /* 2026 */
 }
+@media screen and (max-width: 1032px){
+      #leadership_img {
+        min-height: 50vh !important;
+        width: 100% !important;
+    }
+}
 @media screen and (max-width: 1024px) {
   .elementor-2006
     .elementor-element.elementor-element-10cb016
@@ -2421,9 +2468,9 @@ u {
     width: 12px;
     height: 12px;
   }
-  #leadership_img {
+  /* #leadership_img {
     min-height: 57vh !important;
-  }
+  } */
   #contact_page .Contact_box .Contact_img_con {
     width: 54%;
   }
@@ -2515,6 +2562,9 @@ u {
     > .elementor-widget-wrap {
     padding-left: 10%;
   }
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
+        margin-top: 60px;
+    }
   /* 2026 */
 }
 @media screen and (max-width: 932px) and (orientation: landscape) {
@@ -2619,7 +2669,7 @@ u {
 }
 @media screen and (max-width: 844px) {
   #footer_heading .elementor-heading-title {
-    font-size: 12px;
+    font-size: 10px;
   }
   #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
     height: 420px;
@@ -2667,6 +2717,9 @@ u {
     > .elementor-widget-wrap {
     padding-left: 5px;
   }
+      #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
+        height: 410px;
+    }
   /* 2026 */
 }
 @media screen and (max-width: 800px) {
