--- a/New/style.css
+++ b/New/style.css
@@ -832,7 +832,7 @@ u {
     height: 900px;
   }
   #scroll_col .elementor-widget-wrap {
-    height: 1170px;
+    height: 1160px;
   }
   #leadership_img {
     min-height: 65vh !important;
@@ -1085,18 +1085,19 @@ u {
     > .elementor-widget-wrap {
     padding-left: 35%;
   }
-  #ceo_coin_2026 .elementor-widget-container img
- {
-        width: 310px;
-    }
-    #ceo_video_2026 {
-        width: 530px;
-    }
+  #ceo_coin_2026 .elementor-widget-container img {
+    width: 310px;
+  }
+  #ceo_video_2026 {
+    width: 530px;
+  }
 }
 @media screen and (max-width: 1920px) {
-  #disclaimers_page #scroll_col .elementor-widget-wrap,
-  #conclusions_page #scroll_col .elementor-widget-wrap {
+  #disclaimers_page #scroll_col .elementor-widget-wrap {
     height: 640px;
+  }
+  #conclusions_page #scroll_col .elementor-widget-wrap {
+    height: 610px;
   }
   #scroll_col .elementor-widget-wrap {
     height: 380px;
@@ -1153,7 +1154,7 @@ u {
     font-size: 20px;
   }
   #heading_2026 h1 {
-    font-size: 35px !important;
+    font-size: 32px !important;
   }
   .top_breadcrum_2026,
   #scroll_col .elementor-widget-wrap .elementor-widget-text-editor {
@@ -1173,7 +1174,7 @@ u {
     padding-top: 2%;
   }
   #main_con_2026.ceo_page_2026 #scroll_col .elementor-widget-wrap {
-    height: 400px;
+    height: 370px;
   }
   #dir_click_info .director_details h3 {
     font-size: 18px;
@@ -1187,6 +1188,9 @@ u {
   }
   #person_degination_con_2026 {
     margin-top: -150px;
+  }
+  #person_degination_con_2026 .person_degination_title_2026 h5 {
+    font-size: 20px;
   }
   /* 2026 */
   section#leadership_img {
@@ -1578,11 +1582,11 @@ u {
     height: 260px;
   }
   #leadership_img {
-        min-height: 65vh !important;
-    }
-        #dir_click_info .director_details h3 {
-        font-size: 16px;
-    }
+    min-height: 65vh !important;
+  }
+  #dir_click_info .director_details h3 {
+    font-size: 16px;
+  }
   /* 2026 */
   #banner_art_text img {
     width: 75%;
@@ -1735,29 +1739,36 @@ u {
   #main_con_2026.why_page_2026 #full_content_con_2026,
   #main_con_2026.ceo_page_2026 #full_content_con_2026,
   #main_con_2026.way_page_2026 #full_content_con_2026 {
-    width: 68%;
+    width: 70%;
   }
   #main_con_2026.why_page_2026 #full_img_con_2026,
   #main_con_2026.ceo_page_2026 #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
-    width: 32%;
+    width: 30%;
   }
   #main_con_2026.way_page_2026 .way_img_title_top_2026 h3,
   #main_con_2026.way_page_2026 .way_img_title_2026 h3,
   #person_degination_con_2026 .person_degination_title_2026 h3 {
-    font-size: 14px;
-  }
-  #person_degination_con_2026 .person_degination_title_2026 h5 {
     font-size: 12px;
   }
-  .way_page_2026.institutional_consulting #scroll_col .elementor-widget-wrap,
-  .way_page_2026.clarity_amid_comp #scroll_col .elementor-widget-wrap {
-    height: 350px;
+  #person_degination_con_2026 .person_degination_title_2026 h5 {
+    font-size: 10px;
   }
+  .way_page_2026.building_legacy #scroll_col .elementor-widget-wrap,
+  .way_page_2026.future_proofing #scroll_col .elementor-widget-wrap,
+  .way_page_2026.tax_mitigation #scroll_col .elementor-widget-wrap,
+  .way_page_2026.turning_tax #scroll_col .elementor-widget-wrap,
+  .way_page_2026.finding_the_heart #scroll_col .elementor-widget-wrap,
+  .why_page_2026.anchored_in_indeepen #scroll_col .elementor-widget-wrap,
+  .way_page_2026.institutional_consulting #scroll_col .elementor-widget-wrap,
+  .way_page_2026.clarity_amid_comp #scroll_col .elementor-widget-wrap,
   .why_page_2026 #scroll_col .elementor-widget-wrap,
   .way_page_2026 #scroll_col .elementor-widget-wrap {
-    height: 345px;
+    height: 350px;
   }
+  /* {
+    height: 345px;
+  } */
   #ceo_dis_box_2026 .elementor-icon-box-title {
     font-size: 16px;
   }
@@ -1793,7 +1804,7 @@ u {
     height: 230px;
   }
   #leadership_img {
-    min-height: 65vh !important;
+    min-height: 70vh !important;
   }
   #dir_click_info .director_details h3 {
     font-size: 16px;
@@ -1802,13 +1813,16 @@ u {
     font-size: 14px;
   }
   #disclaimers_page #scroll_col .elementor-widget-wrap {
-    height: 460px;
+    height: 405px;
   }
   #conclusions_page #scroll_col .elementor-widget-wrap {
-    height: 400px;
+    height: 340px;
   }
   #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
     font-size: 10px;
+  }
+  #contact_page_main_col .top_breadcrum_2026 .elementor-widget-container {
+    padding-bottom: 10px;
   }
   /* 2026 */
   #scroll_mini #scroll_col .elementor-widget-wrap {
@@ -1871,6 +1885,39 @@ u {
   }
   /* 2026 */
 }
+@media screen and (max-width: 1292px) and (orientation: landscape) {
+  #main_con_2026.ceo_page_2026 #scroll_col .elementor-widget-wrap {
+    height: 540px;
+  }
+  
+  .way_page_2026.private_marktse #scroll_col .elementor-widget-wrap,
+  .why_page_2026.in_love #scroll_col .elementor-widget-wrap,
+  .way_page_2026.tax_mitigation #scroll_col .elementor-widget-wrap,
+  .way_page_2026.turning_tax #scroll_col .elementor-widget-wrap,
+  .way_page_2026.finding_the_heart #scroll_col .elementor-widget-wrap,
+  .way_page_2026.institutional_consulting #scroll_col .elementor-widget-wrap,
+  .way_page_2026.clarity_amid_comp #scroll_col .elementor-widget-wrap,
+  .why_page_2026 #scroll_col .elementor-widget-wrap,
+  .way_page_2026 #scroll_col .elementor-widget-wrap {
+    height: 600px;
+  }
+  .way_page_2026.building_legacy #scroll_col .elementor-widget-wrap,
+  .way_page_2026.future_proofing #scroll_col .elementor-widget-wrap,
+  .way_page_2026.supporting_family #scroll_col .elementor-widget-wrap,
+  .why_page_2026.anchored_in_indeepen #scroll_col .elementor-widget-wrap{
+    height: 605px;
+  }
+  #disclaimers_page #scroll_col .elementor-widget-wrap{
+    height: 700px;
+  }
+      #conclusions_page #scroll_col .elementor-widget-wrap {
+        height: 710px;
+    }
+    #contact_page .Contact_box.Contact_box_left .Contact_content_con,
+        #contact_page .Contact_box .Contact_img_con {
+        width: 50%;
+    }
+}
 @media screen and (max-width: 1291px) {
   #footer_leftbtn_2026 .elementor-icon-wrapper a,
   #footer_rightbtn_2026 .elementor-icon-wrapper a,
@@ -1897,24 +1944,25 @@ u {
   #home {
     height: calc(100vh - 99px);
   }
+  .way_page_2026.tax_mitigation #scroll_col .elementor-widget-wrap,
   .way_page_2026.institutional_consulting #scroll_col .elementor-widget-wrap,
-  .way_page_2026.future_proofing #scroll_col .elementor-widget-wrap,
-  .way_page_2026.supporting_family #scroll_col .elementor-widget-wrap,
-  .way_page_2026.private_marktse #scroll_col .elementor-widget-wrap {
-    height: 295px;
-  }
-  .way_page_2026.building_legacy #scroll_col .elementor-widget-wrap,
+  .way_page_2026.private_marktse #scroll_col .elementor-widget-wrap,
   .way_page_2026.clarity_amid_comp #scroll_col .elementor-widget-wrap,
   .way_page_2026.turning_tax #scroll_col .elementor-widget-wrap,
   .way_page_2026.finding_the_heart #scroll_col .elementor-widget-wrap,
-  .why_page_2026.anchored_in_indeepen #scroll_col .elementor-widget-wrap,
   .why_page_2026.in_love #scroll_col .elementor-widget-wrap,
   .why_page_2026 #scroll_col .elementor-widget-wrap,
   .way_page_2026 #scroll_col .elementor-widget-wrap {
-    height: 289px;
+    height: 540px;
+  }
+  .way_page_2026.building_legacy #scroll_col .elementor-widget-wrap,
+  .way_page_2026.future_proofing #scroll_col .elementor-widget-wrap,
+  .way_page_2026.supporting_family #scroll_col .elementor-widget-wrap,
+  .why_page_2026.anchored_in_indeepen #scroll_col .elementor-widget-wrap {
+    height: 530px;
   }
   #conclusions_page #scroll_col .elementor-widget-wrap {
-    height: 385px;
+    height: 590px;
   }
   #heading_2026 h1 {
     font-size: 26px !important;
@@ -1928,20 +1976,46 @@ u {
   #main_con_2026.why_page_2026 #full_img_con_2026,
   #main_con_2026.ceo_page_2026 #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
-    width: 35%;
+    width: 45%;
   }
   #main_con_2026.why_page_2026 #full_content_con_2026,
   #main_con_2026.ceo_page_2026 #full_content_con_2026,
   #main_con_2026.way_page_2026 #full_content_con_2026 {
-    width: 65%;
+    width: 55%;
   }
-  #contact_page .Contact_box .Contact_content_con {
-    width: 60%;
-  }
+  #contact_page .Contact_box .Contact_content_con,
   #contact_page .Contact_box .Contact_img_con {
-    width: 40%;
+    width: 50%;
+  }
+  #contact_page
+    .Contact_box.Contact_box_right
+    .Contact_content_con
+    > .elementor-widget-wrap {
+    padding-left: 50%;
+  }
+  #main_con_2026.ceo_page_2026 #scroll_col .elementor-widget-wrap {
+    height: 360px;
+  }
+  #leadership_img {
+    min-height: 60vh !important;
+  }
+  #disclaimers_page #scroll_col .elementor-widget-wrap {
+    height: 620px;
   }
   /* 2026 */
+}
+@media screen and (max-width: 1281px) and (min-height: 1750px) {
+  #main_con_2026.why_page_2026.elevating_every_client,
+  #main_con_2026.why_page_2026.independent_by_design {
+    height: calc(100vh-98px);
+  }
+  #main_con_2026.why_page_2026.elevating_every_client #full_img_con_2026,
+  #main_con_2026.why_page_2026.independent_by_design #full_img_con_2026 {
+    height: 70vh;
+  }
+  #leadership_img {
+    min-height: 25vh !important;
+  }
 }
 @media screen and (max-width: 1281px) and (min-height: 1000px) {
   .the_oxford_difference_print {
@@ -2072,29 +2146,50 @@ u {
   section#leadership_img {
     width: 80%;
   }
-  /* #main_con_2026.why_page_2026 #full_img_con_2026,
+  /* 2026 */
+}
+@media screen and (max-width: 1281px) and (max-height: 800px) {
+  #main_con_2026.why_page_2026 #full_img_con_2026,
   #main_con_2026.ceo_page_2026 #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
-    width: 50%;
+    width: 35%;
   }
   #main_con_2026.why_page_2026 #full_content_con_2026,
   #main_con_2026.ceo_page_2026 #full_content_con_2026,
   #main_con_2026.way_page_2026 #full_content_con_2026 {
-    width: 50%;
-  } */
-  /* 2026 */
-}
-@media screen and (max-width: 1281px) and (min-height: 1750px) {
-  #main_con_2026.why_page_2026.elevating_every_client,
-  #main_con_2026.why_page_2026.independent_by_design {
-    height: calc(100vh-98px);
+    width: 65%;
   }
-  #main_con_2026.why_page_2026.elevating_every_client #full_img_con_2026,
-  #main_con_2026.why_page_2026.independent_by_design #full_img_con_2026 {
-    height: 70vh;
+  .way_page_2026.tax_mitigation #scroll_col .elementor-widget-wrap,
+  .way_page_2026.institutional_consulting #scroll_col .elementor-widget-wrap,
+  .way_page_2026.future_proofing #scroll_col .elementor-widget-wrap,
+  .way_page_2026.building_legacy #scroll_col .elementor-widget-wrap,
+  .way_page_2026.clarity_amid_comp #scroll_col .elementor-widget-wrap,
+  .way_page_2026.turning_tax #scroll_col .elementor-widget-wrap,
+  .way_page_2026.finding_the_heart #scroll_col .elementor-widget-wrap,
+  .why_page_2026.anchored_in_indeepen #scroll_col .elementor-widget-wrap,
+  .why_page_2026 #scroll_col .elementor-widget-wrap,
+  .way_page_2026 #scroll_col .elementor-widget-wrap {
+    height: 380px;
   }
-  #leadership_img {
-    min-height: 25vh !important;
+  .way_page_2026.supporting_family #scroll_col .elementor-widget-wrap,
+  .way_page_2026.private_marktse #scroll_col .elementor-widget-wrap,
+  .why_page_2026.in_love #scroll_col .elementor-widget-wrap {
+    height: 390px;
+  }
+  #main_con_2026.ceo_page_2026 #scroll_col .elementor-widget-wrap {
+    height: 285px;
+  }
+  #conclusions_page #scroll_col .elementor-widget-wrap {
+    height: 416px;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 58%;
+  }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 42%;
+  }
+  #disclaimers_page #scroll_col .elementor-widget-wrap {
+    height: 487px;
   }
 }
 @media screen and (max-width: 1279px) {
@@ -2151,13 +2246,12 @@ u {
     height: 65vh;
     margin-bottom: 60px;
   }
-  /* #main_con_2026.way_page_2026.private_marktse #full_img_con_2026, */
-  #main_con_2026.why_page_2026.in_love #full_img_con_2026{
+  #main_con_2026.why_page_2026.in_love #full_img_con_2026 {
     height: 865px;
   }
-      #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026{
-        height: 520px;
-      }
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
+    height: 520px;
+  }
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     width: 100%;
     height: 755px;
@@ -2168,7 +2262,6 @@ u {
     width: 100%;
     margin-top: 60px;
   }
-  /* #main_con_2026.way_page_2026.building_legacy > .elementor-container, */
   #main_con_2026.way_page_2026.supporting_family > .elementor-container,
   #main_con_2026.way_page_2026.clarity_amid_comp > .elementor-container,
   #main_con_2026.way_page_2026.private_marktse > .elementor-container,
@@ -2229,8 +2322,8 @@ u {
     height: auto;
   }
   #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
-        margin-top: 175px;
-    }
+    margin-top: 175px;
+  }
   /* 2026 */
   #scroll_col .elementor-widget-wrap {
     height: inherit;
@@ -2430,11 +2523,11 @@ u {
   }
   /* 2026 */
 }
-@media screen and (max-width: 1032px){
-      #leadership_img {
-        min-height: 50vh !important;
-        width: 100% !important;
-    }
+@media screen and (max-width: 1032px) {
+  #leadership_img {
+    min-height: 50vh !important;
+    width: 100% !important;
+  }
 }
 @media screen and (max-width: 1024px) {
   .elementor-2006
@@ -2468,9 +2561,9 @@ u {
     width: 12px;
     height: 12px;
   }
-  /* #leadership_img {
-    min-height: 57vh !important;
-  } */
+  #leadership_img {
+    width: 60% !important;
+  }
   #contact_page .Contact_box .Contact_img_con {
     width: 54%;
   }
@@ -2483,6 +2576,11 @@ u {
     > .elementor-widget-wrap {
     padding-left: 25%;
   }
+  #leadership_img {
+    width: 100% !important;
+    min-height: 50vh !important;
+  }
+
   /* 2026 */
 }
 @media screen and (max-width: 1024px) and (min-height: 1360px) {
@@ -2563,8 +2661,8 @@ u {
     padding-left: 10%;
   }
   #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
-        margin-top: 60px;
-    }
+    margin-top: 60px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 932px) and (orientation: landscape) {
@@ -2696,6 +2794,12 @@ u {
   #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
     font-size: 10px;
   }
+  #leadership_img {
+    min-height: 40vh !important;
+  }
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
+    height: 430px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 820px) {
@@ -2717,9 +2821,9 @@ u {
     > .elementor-widget-wrap {
     padding-left: 5px;
   }
-      #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
-        height: 410px;
-    }
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026 {
+    height: 410px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 800px) {
