--- a/New/style.css
+++ b/New/style.css
@@ -3125,12 +3125,15 @@ u {
   .footer {
     padding-top: 0;
   }
-      #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
-        font-size: 12px;
-    }
-        #contact_page .Contact_box .Contact_content_con .Contact_content_heading h3 {
-        font-size: 14px;
-    }
+  #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
+    font-size: 12px;
+  }
+  #contact_page .Contact_box .Contact_content_con .Contact_content_heading h3 {
+    font-size: 14px;
+  }
+  #dir_click_info .director_details h3 {
+    font-size: 10px;
+  }
 }
 @media screen and (max-width: 740px) {
   #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026,
@@ -3152,6 +3155,19 @@ u {
   #main_con_2026.way_page_2026.private_marktse .way_img_title_top_2026 {
     bottom: 40%;
   }
+  #home_logo_2026 img {
+    width: 250px;
+  }
+  #leadership {
+    padding-bottom: 10%;
+  }  
+  #contact_page #contact_sec_con > .elementor-container{
+  flex-direction: column;
+}
+  #contact_page .Contact_box.Contact_box_left .Contact_content_con, #contact_page .Contact_box .Contact_img_co,
+#contact_page .Contact_box .Contact_img_con{
+    width: 50%;
+}
   /* 2026 */
 }
 @media screen and (max-device-width: 720px) {
@@ -3171,10 +3187,19 @@ u {
     height: 42vh !important;
   }
 }
-@media screen and (max-width: 700px) and (orientation: landscape) {
-    #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
-        font-size: 10px;
-    }
+@media screen and (max-device-width: 700px) and (orientation: landscape) {
+  #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
+    font-size: 10px;
+  }
+  #leadership_img {
+    height: 70vh !important;
+  }
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026{
+    height: 400px;
+  }
+  #leadership {
+    padding-bottom: 15%;
+  }
 }
 @media screen and (max-width: 668px) {
   #home_logo_2026 img {
@@ -3501,13 +3526,13 @@ u {
   #print_icon .pom-default:before {
     padding: 10px 10px;
   }
-  /* #footer_leftbtn_2026 .elementor-icon-wrapper a,
-  #footer_rightbtn_2026 .elementor-icon-wrapper a,
-  #menu_download_btn_2026 .elementor-button,
-  #print_icon .elementor-shortcode {
-    width: 100px;
-    height: 39px;
-  } */
+  #dir_click_info .director_details h3{
+    padding: 10px;
+  }
+      #leadership_img .e-hotspot.e-hotspot--icon .e-hotspot__button {
+        width: 6px;
+        height: 6px;
+    }
   #menu_download_btn_2026 .elementor-button {
     padding: 14px 10px;
   }
